# trabalho-ros

./: CMakeLists.txt  package.xml
src/: client.cpp  estruturas.h  img_listener.cpp  robot.cpp  service.cpp  service.py
srv/: Movement.srv
